# bevy_fps

./: .gitattributes  .gitignore  Cargo.toml
assets/scenes/: map.scn
blend/: map.blend  map.blend1
blend/component_definitions/: light.json  movement.json  player.json
src/: lib.rs  main.rs
src/components/: marker.rs  mod.rs  movement.rs
src/plugins/: mod.rs
src/plugins/systems/: assets.rs  core.rs  mod.rs  movement.rs
