[package]
name = "rustgate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fps"
path = "src/lib.rs"

[dependencies]
bevy_asset_ron = "0.2"
ron = "*"
serde = "*"
bevy_rapier3d = { version = "0.11", features = [ "simd-stable" ] }
blender_bevy_toolkit = {git="https://github.com/sdfgeoff/blender_bevy_toolkit"}

[dependencies.bevy]
version = "0.5"
default_features = false
features = ["serialize", "render", "png", "x11", "bevy_wgpu", "bevy_winit"] 

[dependencies.bevy_egui]
version = "0.7"

